# purepress

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  setup.py
dev_inst/: config.py  site.json
dev_inst/pages/: wow.md
dev_inst/posts/: 2014-02-04-octopress-on-github.md  2014-02-04-octopress-summary.md  2014-02-06-octopress-at-two-places.md  2014-05-02-octopress-deploy-rejected.md  2014-07-28-raspberry-pi-three-days-summary.md  2015-11-17-jni-on-osx.md  2015-11-26-use-ndk-in-android-studio.md  2016-01-07-take-photo-on-android.md  2016-02-26-using-letsencrypt.md  2016-06-03-compile-aosp-on-osx.md  2016-06-16-fusion-cache.md  2016-08-05-blog-ng.md  2016-08-07-what-is-jsonp.md  2016-09-29-blog-a-webhook-payload.md  2017-01-04-for-2017.md  2017-02-12-write-a-simple-qq-bot.md  2017-03-29-migrate-to-veripress.md  2017-05-08-genrate-lib-from-dll.md  2017-06-30-ifttt-and-coolq.md  2017-06-30-pyinstaller.md  2018-01-08-fixing-a-bug-about-multithreading-in-cpp.md  2018-08-26-deploy-veripress-using-netlify.md  2018-10-09-hack-lptiyu.md  2018-10-13-collection-of-veripress-themes.md  2018-10-23-reverse-proxy-of-google.md  2018-11-07-turn-off-screen-on-linux-server.md  2018-11-14-qdp.md  2018-12-04-http-proxy-over-qdp.md  2018-12-31-my-2018.md  2020-01-04-2020.md  2020-01-09-multimethods.md  2020-03-03-manipulate-global-vars-before-main.md  2020-08-31-test.md
dev_inst/raw/: foobar.html
dev_inst/theme/static/: style.css
dev_inst/theme/templates/: 404.html  archive.html  footer.html  head.html  header.html  index.html  layout.html  meta.html  nav.html  page.html  post.html  sidebar.html
dev_inst/theme/templates/custom/: nav.html
purepress/: __init__.py  __main__.py  __meta__.py  cli.py  default_config.py
