[tool.poetry]
name = "purepress"
version = "0.1.0"
description = "A simple static blog generator."
license = "MIT"
authors = ["Richard Chien <richardchienthebest@gmail.com>"]
readme = "README.md"
repository = "https://github.com/richardchien/purepress"
keywords = ["Static Blog Generator", "Static Blog", "Blog", "Blog Engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.scripts]
purepress = "purepress.cli:main"

[tool.poetry.dependencies]
python = "^3.6"
Werkzeug = "^1.0.1"
Flask = "^1.1.2"
Markdown = "^3.2.2"
py-gfm = "^1.0.0"
PyYAML = "^5.3.1"
click = "^7.1.2"
colorama = "^0.4.3"
feedgen = "^0.9.0"
pytz = "^2020.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
